# sentinel-cve

./: .gitignore  LICENSE  README.md  SECURITY.md  SECURITY_FIXES.md  planClaudeAgent.md  planEnterprise.md  planSecurity.md  pyproject.toml
config/: k8s-rbac.yaml  slack-manifest.yml  teams-manifest.json  vuln_functions.json
docker/: Dockerfile  docker-compose.yml
sentinel/: .gitignore  __init__.py  cache.py  cli.py  config.py  deep_scan.py  execution_path.py  fetcher.py  formatters.py  k8s_scanner.py  prompts.py  renderer.py  sanitize.py  scanner.py  server.py  ssvc.py  synthesizer.py
sentinel/integrations/: __init__.py  setup_guide.py  slack.py  teams.py  telegram.py
tests/: test_cli.py  test_execution_path.py  test_k8s_scanner.py  test_personas.py  test_scanner.py  test_server.py
