[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-cve"
version = "0.1.0"
description = "CVE Explainer CLI powered by Claude — clear, actionable vulnerability briefings in seconds."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "anthropic>=0.39",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
]

[project.scripts]
sentinel = "sentinel.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]
